deploy/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: appmesh-system
  labels:
    mesh: demo-mesh
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
