deploy/03-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-apps
  labels:
    mesh: demo-mesh
    gateway: ingress-gw
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
