deploy/09-sma-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: sma-svc-v1
  namespace: smart-apps
  labels:
    app: sma-app-v1
spec:
  selector:
    app: sma-app-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sma-v1
  namespace: smart-apps
  labels:
    app: sma-app-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sma-app-v1
  template:
    metadata:
      labels:
        app: sma-app-v1
      annotations:
        appmesh.k8s.aws/mesh: demo-mesh
    spec:
      serviceAccountName: sma-service
      containers:
      - name: smart-meter-api
        image: mauriziopinto/smart-meter-api:latest
        ports:
        - containerPort: 80
