deploy/10-sma-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: sma-svc-v2
  namespace: smart-apps
  labels:
    app: sma-app-v2
spec:
  selector:
    app: sma-app-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sma-v2
  namespace: smart-apps
  labels:
    app: sma-app-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sma-app-v2
  template:
    metadata:
      labels:
        app: sma-app-v2
      annotations:
        appmesh.k8s.aws/mesh: demo-mesh
    spec:
      serviceAccountName: sma-service
      containers:
      - name: smart-meter-api-v2
        image: mauriziopinto/smart-meter-api-v2:latest
        ports:
        - containerPort: 80
