deploy/08-virtual-service.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: sma-service
  namespace: smart-apps
spec:
  awsName: sma-service.smart-apps.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: sma-virtual-router
